--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     compile files('libs/microsoft-band-1.3.20105.2.jar')
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
+
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
