--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="com.microsoft.band.service.access.BIND_BAND_SERVICE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     
 
     <application
@@ -19,7 +20,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.microsoft.band.sdk.heartrate.BandHeartRateAppActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="landscape"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
