--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 18 00:04:10 CST 2016
-sdk.dir=/Users/shawncaeiro/Library/Android/sdk
+#Wed Feb 24 00:10:26 CST 2016
+sdk.dir=C\:\\Users\\Samantha\\AppData\\Local\\Android\\sdk
