--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.microsoft.band.sdk.heartrate.BandHeartRateAppActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
