--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 24 00:10:26 CST 2016
-sdk.dir=C\:\\Users\\Samantha\\AppData\\Local\\Android\\sdk
+#Thu Feb 25 13:24:18 CST 2016
+sdk.dir=/Users/Mujki/Library/Android/sdk
